tests/ui/link-native-libs/issue-43925.stderr
error[E0658]: link cfg is unstable
  --> $DIR/issue-43925.rs:1:22
   |
LL | #[link(name = "foo", cfg("rlib"))]
   |                      ^^^^^^^^^^^
   |
   = help: add `#![feature(link_cfg)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `cfg` predicate key must be an identifier
  --> $DIR/issue-43925.rs:1:26
   |
LL | #[link(name = "foo", cfg("rlib"))]
   |                          ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
